err/boduch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/boduch'...
Listing './lib/python3.5/site-packages/boduch/constant'...
Listing './lib/python3.5/site-packages/boduch/data'...
Listing './lib/python3.5/site-packages/boduch/event'...
Listing './lib/python3.5/site-packages/boduch/event/data'...
Listing './lib/python3.5/site-packages/boduch/event/predicate'...
Listing './lib/python3.5/site-packages/boduch/event/state'...
Listing './lib/python3.5/site-packages/boduch/handle'...
Listing './lib/python3.5/site-packages/boduch/handle/data'...
Listing './lib/python3.5/site-packages/boduch/handle/predicate'...
Listing './lib/python3.5/site-packages/boduch/handle/state'...
Listing './lib/python3.5/site-packages/boduch/interface'...
Listing './lib/python3.5/site-packages/boduch/interface/data'...
Listing './lib/python3.5/site-packages/boduch/interface/event'...
Listing './lib/python3.5/site-packages/boduch/interface/handle'...
Listing './lib/python3.5/site-packages/boduch/interface/predicate'...
Listing './lib/python3.5/site-packages/boduch/interface/state'...
Listing './lib/python3.5/site-packages/boduch/interface/subscription'...
Listing './lib/python3.5/site-packages/boduch/interface/type'...
Listing './lib/python3.5/site-packages/boduch/predicate'...
Listing './lib/python3.5/site-packages/boduch/state'...
Listing './lib/python3.5/site-packages/boduch/subscription'...
Listing './lib/python3.5/site-packages/boduch/subscription/data'...
Listing './lib/python3.5/site-packages/boduch/subscription/predicate'...
Listing './lib/python3.5/site-packages/boduch/subscription/state'...
Listing './lib/python3.5/site-packages/boduch/test'...
Compiling './lib/python3.5/site-packages/boduch/test/event.py'...
***   File "./lib/python3.5/site-packages/boduch/test/event.py", line 65
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/boduch/type'...
Listing './lib/python3.5/site-packages/boduch-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
